--- a/Twitter/twittertest/pom.xml
+++ b/Twitter/twittertest/pom.xml
@@ -46,5 +46,11 @@
 			<artifactId>cucumber-core</artifactId>
 			<version>4.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>3.0.0-M1</version>
+			<type>maven-plugin</type>
+		</dependency>
 	</dependencies>
 </project>
