--- a/Twitter/twittertest/pom.xml
+++ b/Twitter/twittertest/pom.xml
@@ -54,11 +54,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.0.0-M1</version>
-					<configuration>
-						<includes>
-							<exclude>**/*_Test.java </exclude>
-						</includes>
-					</configuration>
+<!-- 					<configuration> -->
+<!-- 						<includes> -->
+<!-- 							<exclude>**/*_Test.java </exclude> -->
+<!-- 						</includes> -->
+<!-- 					</configuration> -->
 				</plugin>
 			</plugins>
 		</pluginManagement>
